--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --inline --open"
+    "start": "webpack-dev-server --inline --open",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -30,6 +31,11 @@
     "webpack-dev-server": "latest"
   },
   "dependencies": {
+    "@tensorflow-models/posenet": "^2.2.1",
+    "@tensorflow/tfjs": "^2.4.0",
+    "@tensorflow/tfjs-converter": "^2.4.0",
+    "@tensorflow/tfjs-core": "^2.4.0",
+    "@types/webgl2": "0.0.5",
     "three": "latest"
   }
 }
